--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTMLTask</title>
 </head>
 <body>
-    <h1>html</h1>
+    <h1>HTML Task</h1>
+    <h2>Groceries list</h2>
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem tempora quisquam maxime libero ipsam rerum sit, ducimus laboriosam saepe veniam neque adipisci praesentium labore. Esse cupiditate perspiciatis ea at.
+    Totam, nihil! Omnis eligendi quis enim quidem maxime vitae quam ipsum accusantium esse eos sequi tenetur id repellat quisquam dicta asperiores repellendus, at suscipit sunt ex! Molestias, architecto dignissimos? Sapiente?</h3>
+    <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, similique accusamus. Cum tempore corporis quibusdam perspiciatis magni non illo commodi porro, voluptatum, dolores minima voluptate recusandae est sint veritatis ullam?</h4>
 </body>
 </html>
