--- a/index.html
+++ b/index.html
@@ -44,5 +44,39 @@
           <input type="text" placeholder="Last name" name="Last name" id="Last name" required>
           <hr>
     <textarea id="story" name="story" rows="5" cols="33">Other info</textarea>
+
+    <h2>Users Table</h2>
+    <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Users Gender</th>
+            <th>Net Worth</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Ben</td>
+            <td>23</td>
+            <td>Male</td>
+            <td>23000$</td>
+        
+          </tr>
+          <tr>
+            <td>Bob</td>
+            <td>45</td>
+            <td>Male</td>
+            <td>193000$</td>
+          </tr>
+          <tr>
+            <td>Julia</td>
+            <td>31</td>
+            <td>Female</td>
+            <td>223000$</td>
+          </tr>
+        </tbody>
+      </table>
+      
 </body>
 </html>
