--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>HTML Task</h1>
     <h2>Groceries list</h2>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem tempora quisquam maxime libero ipsam rerum sit, ducimus laboriosam saepe veniam neque adipisci praesentium labore. Esse cupiditate perspiciatis ea at.
-    Totam, nihil! Omnis eligendi quis enim quidem maxime vitae quam ipsum accusantium esse eos sequi tenetur id repellat quisquam dicta asperiores repellendus, at suscipit sunt ex! Molestias, architecto dignissimos? Sapiente?</h3>
-    <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, similique accusamus. Cum tempore corporis quibusdam perspiciatis magni non illo commodi porro, voluptatum, dolores minima voluptate recusandae est sint veritatis ullam?</h4>
+    <h7>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem tempora quisquam maxime libero ipsam rerum sit, ducimus laboriosam saepe veniam neque adipisci praesentium labore. Esse cupiditate perspiciatis ea at.
+    Totam, nihil! Omnis eligendi quis enim quidem maxime vitae quam ipsum accusantium esse eos sequi tenetur id repellat quisquam dicta asperiores repellendus, at suscipit sunt ex! Molestias, architecto dignissimos? Sapiente?</h7>
+    <h8>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, similique accusamus. Cum tempore corporis quibusdam perspiciatis magni non illo commodi porro, voluptatum, dolores minima voluptate recusandae est sint veritatis ullam?</h8>
     <h3>Items to buy:</h3>
     <ol>
         <li>Bread</li>
@@ -19,14 +19,18 @@
         <li>Sugar</li>
         <li>Paper</li>
         <li>Pork</li>
-<h2>Registration form</h2>
+<i>Deliver to Some Street #52</i>
 
+<form>Registration form
+  <form>
+    <fieldset>
 <label>
           <p>Address info</p>
           <hr>
       
-          <label for="City"><b>City</b></label>
-          <input type="text" placeholder="Enter City" name="City" id="City" required>
+          <label>
+            <input placeholder="Enter City">
+          </label>
       
           <label for="Street Name"><b>Street Name</b></label>
           <input type="Street Name" placeholder="Enter Street Name" name="Street Name" id="Street Name" required>
@@ -43,9 +47,11 @@
           <label for="Last name"><b>Street Name</b></label>
           <input type="text" placeholder="Last name" name="Last name" id="Last name" required>
           <hr>
-    <textarea id="story" name="story" rows="5" cols="33">Other info</textarea>
-
+    <textarea id="story"placeholder="story" rows="5" cols="33">Other info</textarea>
+  </fieldset>
+</form>
     <h2>Users Table</h2>
+    <h3 align="center">Users</h3>  
     <table>
         <thead>
           <tr>
